--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="pref_sort_popular">Most Popular</string>
     <string name="pref_sort_rating">Most Rated</string>
     <string name="action_settings">Settings</string>
-    <string name="APP_KEY">""</string>
+`    <string name="APP_KEY"></string>
 </resources>
